--- a/Documentos/README
+++ b/Documentos/README
@@ -1,1 +1,1 @@
-Armazenamento de documentos escritos no geral, como GDD, referências de conteúdos terceirizados, anotações, etc.
+Armazenamento de documentos no geral, como GDD, moodboards, anotações, etc.
